Changelog
=========


2.0.1 (unreleased)
------------------

- Fix component registry tear down in MockTestCase. [buchi]


2.0.0 (2019-11-11)
------------------

- Add support for Plone 5.2 and Python 3. [buchi]
- No longer base on plone.mocktestcase as it's not compatible with Python 3 and
  replace mocker with unittest.mock. This is a *breaking* change and may
  require amending existing tests based on ``MockTestCase``.
  [buchi]
- Reimplement freezer without forbiddenfruit and mocker. [buchi]


1.20.1 (2019-04-04)
-------------------

- Optimize "ignore_modules" to avoid unneeded stack inspections. [Rotonen]


1.20.0 (2019-01-25)
-------------------

- Add "ignore_modules" support to freezer. [jone]


1.19.2 (2018-11-05)
-------------------

- Fix in timezone aware freezing for Zope DateTime. [njohner]


1.19.1 (2018-10-23)
-------------------

- Fix invalid reST in README.rst [Nachtalb]


1.19.0 (2018-10-15)
-------------------

- Drop support for plone 4.2. [jone]
- Fix bug with getting a timezone aware "now". [njohner]


1.18.0 (2018-07-12)
-------------------

- Extend ``staticuid`` to also be a context manager. [jone]
- Also freeze ``datetime.utcnow()``. [Rotonen]


1.17.0 (2017-10-02)
-------------------

- Add ``FTWIntegrationTesting`` and ``FTWIntegrationTestCase``. [jone]

1.16.0 (2017-08-08)
-------------------

- Support Plone 5.1 for ConsoleScriptLayer. [jone]

1.15.2 (2017-07-18)
-------------------

- Freezer: keep timezone info when moving clock forward / backward. [jone]
- Freezer: Fix DST-bug in today() and time(). [jone]


1.15.1 (2017-07-04)
-------------------

- Fix savepoint simulation to cleanup savepoints. [jone]


1.15.0 (2017-07-03)
-------------------

- Add savepoint simulation to transaction interceptor. [jone]


1.14.0 (2017-06-23)
-------------------

- Do not require "Plone" egg. [jone]


1.13.0 (2017-06-20)
-------------------

- Add transaction interceptor. [jone]


1.12.0 (2017-06-19)
-------------------
