@@ -212,6 +212,6 @@ class TestFreezeIntegration(TestCase):
 
         thedate = self.layer['portal'].current_date
         self.assertEquals(datetime.datetime(2015, 7, 22, 11, 45, 58), thedate)
-        self.assertEquals('ftw.testing.freezer.FrozenDateTime',
+        self.assertEquals('ftw.testing.freezer.FrozenDatetime',
                           '.'.join((type(thedate).__module__,
                                     type(thedate).__name__)))
